# OSi

lab1/: 216_Показеев_Лаб1.docx  CMakeLists.txt  README.md
lab1/output_files/: a  b
lab1/src/: child.c  main.c
lab2/: .gitignore  216_Показеев_Лаб2.docx  CMakeLists.txt  CMakePresets.json  compile_commands.json
lab2/.cache/clangd/index/: main.c.CBF84C90E3FB697C.idx  sort.c.EBB55B247227CA2F.idx  sort.h.CC6C410212030C63.idx  utils.c.860E99A5C85C8793.idx  utils.h.39D8495393E74884.idx
lab2/include/: sort.h  utils.h
lab2/src/: main.c  sort.c  utils.c
lab3/: .gitignore  216_Показеев_Лаб3.docx  CMakeLists.txt
lab3/output_files/: test1  test2
lab3/src/: child.c  main.c
lab4/: .gitignore  216_Показеев_Лаб4.docx  CMakeLists.txt  strace_res.txt
lab4/libs/: CMakeLists.txt
lab4/libs/math_lib/: CMakeLists.txt  math_lib.c  math_lib.h
lab4/libs/sort_lib/: CMakeLists.txt  sort_lib.c  sort_lib.h
lab4/src/: CMakeLists.txt  main_dynamic.c  main_linking.c
